# py-poetry

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: code-checks.yml  codeql.yaml
tests/: test_main.py
