[tool.poetry]
name = "codespaces-python-poetry"
version = "0.1.0"
description = "A Python template for Codespaces"
authors = ["Stephen Titcombe <40187876+stitcombe@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "codespaces_python_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
pyflakes = "^3.0.1"
black = "^23.3.0"
bandit = "^1.7.5"
pydocstyle = "^6.3.0"
radon = "^6.0.1"
isort = "^5.12.0"
pre-commit = "^3.2.2"
pytest = "^7.2.2"
coverage = "^7.2.2"
pytest-mock = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
