[tool.poetry]
name = "codespaces-python-poetry"
version = "0.0.1"
description = "A Python template for Codespaces"
authors = ["Stephen Titcombe <40187876+stitcombe@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "codespaces_python_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
radon = "^6.0.1"
pre-commit = "^3.2.2"
pytest = "^7.2.2"
coverage = "^7.2.2"
pytest-mock = "^3.10.0"
nox = "^2022.11.21"
ruff = "^0.0.262"
bandit = "^1.7.5"
safety = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
